# lion_rocket

./: .env.example  .gitignore  ADMIN_LOGIN_IMPLEMENTATION.md  ADMIN_USER_MANAGEMENT_TEST_GUIDE.md  API_DOCUMENTATION.md  API_INDEX.md  API_SPECIFICATION.md  ARCHITECTURE.md  BACKEND_STRUCTURE.md  BUILD_SUMMARY.md  CLAUDE.md  CLAUDE_API_INTEGRATION.md  DATABASE_SCHEMA.sql  DOCKER_SETUP.md  DOCUMENTATION_MAP.md  ENV_MANAGEMENT.md  ENV_STRUCTURE.md  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  PROJECT_INDEX.md  README.md  SECURITY_ANALYSIS_REPORT.md  SETUP_GUIDE.md  build-prod.ps1  build.cmd  build.ps1  build.sh  cleanup.cmd  cleanup.ps1  cleanup.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-up.cmd  docker-up.ps1  docker-up.sh  install-uv.ps1  install-uv.sh  lion_rocket.md  nginx.conf  (+7 more)
backend/: .env.example  ADMIN_API_DOCUMENTATION.md  Dockerfile  Dockerfile.prod  README.md  REFACTORING_SUMMARY.md  add_missing_columns.py  character_summary.py  check_avatar_urls.py  check_other_gender.py  check_schema.py  check_tables.py  create_admin.py  create_characters.py  create_default_characters.py  debug_admin_error.py  dev.cmd  dev.ps1  dev.sh  init_database.py  manage.py  openapi.json  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  restart_server.md  run_db_update.md  run_server.py  setup_characters.md  start_server.bat  test.ps1  test.sh  test_admin_api.py  test_admin_api_fixed.py  test_admin_login.py  test_admin_middleware.py  test_api.py  test_avatar_fetching.py  test_avatar_system.py  (+16 more)
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/app/: database.py  main.py  main.py.bak2  models.py  schemas.py
backend/documents/: ADMIN_API_TESTING.md  CLAUDE_API_SETUP.md  CLAUDE_API_TEST_RESULT.md  CLAUDE_MODEL_FIX.md  CONFIG_FIX_SUMMARY.md  README_TESTING.md
backend/tests/: conftest.py  test_admin_endpoint_fix.py  test_admin_error.py  test_admin_user_response.py  test_all_chat_combinations.py  test_api_direct.py  test_avatar_endpoint.py  test_chat_api.py  test_chat_api_complete.py  test_chat_integration.py  test_claude_api_direct.py  test_claude_connection.py  test_claude_models.py  test_claude_simple.py  test_conversation_summary.py  test_cors_fix.py  test_create_user.py  test_endpoint_direct.py  test_final.py  test_imports.py  test_quick_chat.py  test_register_fix.py  test_server_status.py  test_summary_simple.py  test_token_tracking_system.py  test_with_new_token.py
frontend/: .env.example  .prettierrc  Dockerfile  Dockerfile.prod  THEME_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo  vite.config.ts
frontend/.claude/: settings.local.json
frontend/src/: App.vue  main.js  (+2 more)
(+222 files in other folders)
